# Smartcar-ROS

can_bridge/src/: CanBridge.cpp
common/static_tf/launch/: static_tf_yunlecar.launch
control/waypoint_follower/launch/: pure_persuit.launch
driver/odom_imu/src/: odom_imu.cpp
gateway/src/: app.py  common.py  switch.py
launch_package/launch/: test_fusion.launch  xuancheng.launch  yunle_car.launch
localization/ndt_localization/launch/: test_xuancheng.launch
localization/ndt_localization/src/: ndt_localization.cpp
map/ndt_mapping/launch/: fast_ndt_mapping.launch
map/ndt_mapping/params/: params_ndt_mapping.yaml
map/ndt_mapping/src/: LidarMapping.cpp
map/static_map/launch/: load_densy_map.launch
map/static_map/src/: static_map_densy.cpp
msgs/path_msgs/msg/: Lane.msg
msgs/smartcar_msgs/: CMakeLists.txt
msgs/smartcar_msgs/msg/: CrossLock.msg  State.msg  UserInterface.msg  Waypoint.msg
msgs/yunle_msgs/: .gitignore  readme.md
msgs/yunle_msgs/location_msgs/: .gitignore  CMakeLists.txt  package.xml
msgs/yunle_msgs/location_msgs/msg/: UtmOdometer.msg  UtmPoint.msg  UtmWithPose.msg
msgs/yunle_msgs/monitor_msgs/: .gitignore  CMakeLists.txt  package.xml
msgs/yunle_msgs/track_msgs/: .gitignore  CMakeLists.txt  package.xml
msgs/yunle_msgs/track_msgs/msg/: LaneSection.msg  ReplaySection.msg  SectionTaskState.msg  SiteSection.msg  TaskShutdown.msg  TrackingLineSignal.msg  TrjSection.msg  WayPoint.msg
msgs/yunle_sensor_msgs/msg/: DetectObjs.msg
state_machine/launch/: state_machine.launch
state_machine/src/: main.py
(+32 files in other folders)
